src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__complex_initial_values_in_struct_variable_using_multiplied_statement.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%MyStruct = type { %MyPoint, [4 x i16], i32 }
%MyPoint = type { i32, i32 }

@a = global %MyStruct { %MyPoint { i32 1, i32 2 }, [4 x i16] [i16 0, i16 1, i16 2, i16 3], i32 7 }
@__MyPoint__init = unnamed_addr constant %MyPoint zeroinitializer
@__MyStruct__init = unnamed_addr constant %MyStruct zeroinitializer

