src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__enums_with_inline_initializer_are_initialized.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@x = global i32 2
@__main_var1.x1 = unnamed_addr constant i32 1
@__main_var2.x7 = unnamed_addr constant i32 2
@__global_x.yellow = unnamed_addr constant i32 1
@__main_y.redy = unnamed_addr constant i32 1
@__main_y.yellowy = unnamed_addr constant i32 2
@__main_y.greeny = unnamed_addr constant i32 3
@__main_var1.x2 = unnamed_addr constant i32 2
@__main_var1.x3 = unnamed_addr constant i32 3
@__main_var2.x5 = unnamed_addr constant i32 0
@__main_var2.x6 = unnamed_addr constant i32 1
@__main_var3.x8 = unnamed_addr constant i32 0
@__main_var3.x9 = unnamed_addr constant i32 1
@__global_x.red = unnamed_addr constant i32 0
@__global_x.green = unnamed_addr constant i32 2

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %y = alloca i32, align [filtered]
  %var1 = alloca i32, align [filtered]
  %var2 = alloca i32, align [filtered]
  %var3 = alloca i32, align [filtered]
  store i32 2, i32* %y, align [filtered]
  store i32 1, i32* %var1, align [filtered]
  store i32 2, i32* %var2, align [filtered]
  store i32 1, i32* %var3, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}
