src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_struct_types.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
assertion_line: 25
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%MyStruct = type { i16, i16, i8, i8, float, float }

@MyStruct__init = unnamed_addr constant %MyStruct { i16 7, i16 0, i8 1, i8 0, float 0x400921CAC0000000, float 0.000000e+00 }
@x = global %MyStruct { i16 7, i16 0, i8 1, i8 0, float 0x400921CAC0000000, float 0.000000e+00 }

