src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__initial_values_in_struct_variable_missing_init.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%MyStruct = type { i32, i32, i32 }

@a = global %MyStruct { i32 5, i32 0, i32 10 }
@b = global %MyStruct { i32 0, i32 3, i32 10 }
@__MyStruct__init = unnamed_addr constant %MyStruct zeroinitializer

