src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__partly_uninitialized_const_struct_will_get_default_values.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result.unwrap()
---
; ModuleID = 'main'
source_filename = "main"

%Point = type { i32, i32, i32 }

@x = unnamed_addr constant %Point { i32 1, i32 2, i32 3 }
@__Point__init = unnamed_addr constant %Point { i32 0, i32 2, i32 3 }
@empty = unnamed_addr constant %Point { i32 0, i32 2, i32 3 }

