src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__skipped_field_members_for_array_of_structs_are_zero_initialized.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

%main = type { [3 x %STRUCT1] }
%STRUCT1 = type { i32, [2 x %STRUCT2] }
%STRUCT2 = type { i32, i32 }

@main_instance = global %main { [3 x %STRUCT1] [%STRUCT1 { i32 0, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 0 }, %STRUCT2 zeroinitializer] }, %STRUCT1 { i32 2, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 1 }, %STRUCT2 zeroinitializer] }, %STRUCT1 { i32 1, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 0 }, %STRUCT2 { i32 0, i32 2 }] }] }
@__STRUCT1__init = unnamed_addr constant %STRUCT1 zeroinitializer
@__STRUCT2__init = unnamed_addr constant %STRUCT2 zeroinitializer
@__main.var_init1__init = unnamed_addr constant [3 x %STRUCT1] [%STRUCT1 { i32 0, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 0 }, %STRUCT2 zeroinitializer] }, %STRUCT1 { i32 2, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 1 }, %STRUCT2 zeroinitializer] }, %STRUCT1 { i32 1, [2 x %STRUCT2] [%STRUCT2 { i32 1, i32 0 }, %STRUCT2 { i32 0, i32 2 }] }]

define void @main(%main* %0) {
entry:
  %var_init1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  ret void
}

