src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_init_with_wrong_types_does_not_trigger_codegen_validation.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: msg
---
error[E075]: Could not generate initial value(s) for: MyType, MyStruct

error[E041]: Cannot generate literal initializer for 'MyType': Value cannot be derived
  ┌─ <internal>:7:30
  │
7 │         TYPE MyType : INT := 'hello'; END_TYPE
  │              ------          ^^^^^^^ Cannot generate literal initializer for 'MyType': Value cannot be derived
  │              │                
  │              see also

error[E041]: Cannot generate literal initializer for 'MyStruct.a': Value cannot be derived
   ┌─ <internal>:10:22
   │
 9 │         TYPE MyStruct: STRUCT
   │              -------- see also
10 │           a: DINT := 'hello';
   │                      ^^^^^^^ Cannot generate literal initializer for 'MyStruct.a': Value cannot be derived
